quotes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quotes-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /quotes
            pathType: Prefix
            backend:
              service:
                name: quotes-service
                port:
                  number: 80
